[GB.WEB.FORM] * NEW: WebControl: If Expand is FALSE, then prevent the control from shrinking. * NEW: WebTable: Columns now have a Width property, which defines its minimum width. * NEW: WebLabel: Allow wrapping, but align vertically to the baseline and hides overflowing text. Not perfect yet... :-(
git-svn-id: svn://localhost/gambas/trunk@7543 867c0c6c-44f3-4631-809d-bfa615b0a4ec

--- a/comp/src/gb.web.form/gw-style.css
+++ b/comp/src/gb.web.form/gw-style.css
@@ -233,9 +233,9 @@ P:first-child,UL:first-child,OL:first-child {
 }
 
 .gw-label {
-  white-space: nowrap;
   display: flex;
-  align-items: center;
+  align-items: baseline;
+  overflow: hidden;
 }
 
 #gw-modal {
@@ -497,4 +497,3 @@ P:first-child,UL:first-child,OL:first-child {
 .gw-table > DIV > TABLE > TBODY > TR:hover {
   background-color: #F0F0F0;
 }
-
